[package]
name = "acceleration_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
num-bigint = "0.4"
num-traits = "0.2"
time = "0.2"
rayon = "1.5"
plotters = "0.3.5"
rand = "0.8.5"